# truthkeep-memory

./: .gitignore  .npmignore  AEGIS_V10_FULL_GUIDE.md  AEGIS_V9_FULL_GUIDE.md  AUDIT_PREP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_RETENTION.md  ENTERPRISE_RELEASE_MANIFEST.json  INSTALL.md  INSTALL_TRUTHKEEP_WINDOWS.ps1  LICENSE  MIGRATION_NOTES.md  PRIVACY.md  QUICKSTART.md  QUICKSTART_5_MINUTES.md  README.md  RUN_TRUTHKEEP_MAC_LINUX.sh  RUN_TRUTHKEEP_WINDOWS.cmd  SECURITY.md  SECURITY_LIMITATIONS.md  SECURITY_THREAT_MODEL.md  START_HERE.md  VERSION.md  index.ts  index.ts.save  openclaw.plugin.advanced.json  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.codex/: config.toml  gsd-file-manifest.json
.planning/: AEGIS-ADOPTION-ROADMAP.md  PRODUCTION-EXCELLENCE-ROADMAP.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.specify/: init-options.json
aegis_py/: ARCHITECTURE_BEAST_MAP.md  PREHISTORIC_CORE_SYSTEM.md  PREHISTORIC_DEPTH_MAP.md  PREHISTORIC_EXECUTION_PRIORITIES.md  __init__.py  app.py  backup_surface.py  cli.py  command_center_shell_report.py  command_center_shell_surface.py  consumer_shell_report.py  consumer_shell_surface.py  core_showcase_report.py  core_showcase_surface.py  dashboard_shell_report.py  dashboard_shell_surface.py  experience_brief_report.py  experience_brief_surface.py  facade.py  governed_background_surface.py  graph_analysis.py  health_surface.py  install_check.py  main.py  mcp_universal.py  operations.py  operator_surface.py  prehistoric_completion.py  spotlight_surface.py  surface.py  sync_surface.py  tool_registry.py  truth_transition_timeline_report.py  truth_transition_timeline_surface.py  version.py  workflow_shell_report.py  (+1 more)
(+916 files in other folders)
