[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truthkeep-memory"
version = "10.0.0"
description = "TruthKeep Memory: The truth-aware memory engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "antigravity", email = "antigravity@google.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "aiosqlite",
    "fastmcp"
]

[project.scripts]
aegis-mcp = "aegis_py.mcp.server:main"
aegis-check = "aegis_py.install_check:main"
truthkeep = "aegis_py.cli:main"
truthkeep-memory = "aegis_py.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_py*", "truthkeep*"]
